# stt-tts-talk

./: .env  .env.example  .gitignore  main.py  memo.md  pyproject.toml
stt/: __init__.py  ai_chat.py  config.py  effect.py  exceptions.py  googlevoice.py  main.py  nijivoice.py  output.py  speech_recognition.py  talk.py  voice.py
